--- a/snapshot/packages/stitcher-common/pyproject.toml
+++ b/snapshot/packages/stitcher-common/pyproject.toml
@@ -7,8 +7,13 @@ name = "stitcher-common"
 version = "0.1.0"
 description = "Common utilities and protocols for Stitcher."
 requires-python = ">=3.10"
-dependencies = []
+dependencies = [
+    "stitcher-bus",
+]
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/stitcher"]
 include = ["/src/stitcher/common/assets"]
+
+[tool.uv.sources]
+stitcher-bus = { workspace = true }
