--- a/packages/stitcher-bus/pyproject.toml
+++ b/packages/stitcher-bus/pyproject.toml
@@ -3,17 +3,14 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "stitcher-common"
+name = "stitcher-bus"
 version = "0.1.0"
-description = "Common utilities and protocols for Stitcher."
+description = "Event and message orchestration for Stitcher."
 requires-python = ">=3.10"
 dependencies = [
-    "stitcher-bus",
+    "pyneedle-pointer",
+    "pyneedle-spec",
 ]
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/stitcher"]
-include = ["/src/stitcher/common/assets"]
-
-[tool.uv.sources]
-stitcher-bus = { workspace = true }
